[gd_scene load_steps=4 format=3 uid="uid://b47jb26y4hwsa"]

[ext_resource type="Script" path="res://UI/end_screen.gd" id="1_48yfx"]
[ext_resource type="LabelSettings" uid="uid://1kc3p7bicsom" path="res://UI/Myfont.tres" id="2_tqbw1"]
[ext_resource type="Texture2D" uid="uid://0mlev1fbtckk" path="res://Sprites/diamond_over.png" id="3_8kwif"]

[node name="Control" type="Control"]
process_mode = 3
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_48yfx")

[node name="ColorRect2" type="ColorRect" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -213.0
offset_top = -120.0
offset_right = 213.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.049, 1.085)
pivot_offset = Vector2(213, 120)
size_flags_vertical = 4

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -213.0
offset_top = -120.0
offset_right = 213.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
color = Color(0, 0, 0, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
process_priority = 2
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -208.0
offset_top = -116.0
offset_right = 208.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
z_index = 2
layout_mode = 2
size_flags_horizontal = 3

[node name="Container6" type="Container" parent="HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3

[node name="DeathCounter" type="Label" parent="HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Deaths: 0"
label_settings = ExtResource("2_tqbw1")

[node name="Container7" type="Container" parent="HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
z_index = 2
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "You won"
label_settings = ExtResource("2_tqbw1")

[node name="Container" type="Container" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Container5" type="Container" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(125, 25)
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -13.5
offset_right = 48.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
text = "Next Level"
label_settings = ExtResource("2_tqbw1")
horizontal_alignment = 1

[node name="Container2" type="Container" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button2" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(125, 25)
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Button2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -13.5
offset_right = 48.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
text = "Main menu"
label_settings = ExtResource("2_tqbw1")
horizontal_alignment = 1

[node name="Container3" type="Container" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button3" type="Button" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(125, 25)
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Button3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -13.5
offset_right = 48.0
offset_bottom = 13.5
grow_horizontal = 2
grow_vertical = 2
text = "Restart"
label_settings = ExtResource("2_tqbw1")
horizontal_alignment = 1

[node name="Container4" type="Container" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
z_index = 2
layout_mode = 2
size_flags_horizontal = 3

[node name="Container7" type="Container" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
texture = ExtResource("3_8kwif")
stretch_mode = 5

[node name="Container6" type="Container" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
label_settings = ExtResource("2_tqbw1")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Container9" type="Container" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Button2" to="." method="_on_button_Exit_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Button3" to="." method="_on_button_restart_pressed"]
